# FILO-Clipboard

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
src/: cli.rs  clipboard_extras.rs  event_handler.rs  key_utils.rs  lib.rs  main.rs  winapi_abstractions.rs  winapi_functions.rs  window.rs
