[package]
name = "filo-clipboard"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "4.2.1"
winapi = {version = "0.3.9", features = ["winuser", "std", "impl-default"]}
error-code = "2.3.0"
clap = "3.0.0-beta.4"
crossbeam = "0.8.1"